resources/base.css
@font-face{
	font-family: OpenSans;
	src: url('./font/OpenSans/OpenSans.ttf');
	font-weight: normal;
}
@font-face{
	font-family: OpenSans;
	src: url('./font/OpenSans/OpenSans-Light.ttf');
	font-weight: lighter;
}
@font-face{
	font-family: OpenSans;
	src: url('./font/OpenSans/OpenSans-SemiBold.ttf');
	font-weight: bold;
}

html{
	overflow: hidden;

}

body{
	font-family: OpenSans, sans-serif;
	background-color:#c4c4c4;
	margin:0;
}
  
.container{
	display: grid;
	grid-template-columns: repeat(3,1fr);
	grid-auto-rows: 2em repeat(2,1fr);
	height: 100vh;
	
}
.titleBar{
	-webkit-app-region: drag;
	height:2em;
	background-color: orange;
	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
	grid-row:1;
	grid-column: 1 / span 3;
	
}

.grid-item{
	background-color: #ffffff;
	margin:1em;
	padding:1.5em;
	border-radius: 5px;
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}
img{
	width: 75%;

}
#circuit{
	background-color: #ffffff;
	/*border-style: solid;*/
	grid-row: 2 / span 2;
	grid-column: 1 / span 2;
}

.values{
	margin: 20px;
	margin-left: 70px;
}

.values2{
	margin: 20px;
	margin-left: 185px;
}

#diagram{
	margin-top: 0;
	margin-left: 30px;
	margin-bottom: 0px;
}
	

#output{
	grid-row: 3 / span 1;
	grid-column: 3;
}

#input{
	grid-row: 2;
	grid-column: 3;
}

h3{
	margin-bottom:.25em;
	text-align: center;
}

